--- a/server.html
+++ b/server.html
@@ -6,7 +6,9 @@
     <title>Node.js 웹 서버</title>
   </head>
   <body>
-    <h1>Node.js 웹 서버입니다.</h1>
-    <p>프런트엔드 스페셜 리스트를 향해!</p>
+    <form action="/login">
+      <input id="name" name="name" placeholder="이름을 입력하세요." />
+      <button id="login">로그인</button>
+    </form>
   </body>
 </html>
